--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,15 +1,15 @@
 [theme]
-# Primary accent color for interactive elements (WhatsApp green).
+# Primary accent color for interactive elements.
 primaryColor = "#25D366"
 
-# Background color for the main content area (WhatsApp light gray).
+# Background color for the main content area.
 backgroundColor = "#E5E5E5"
 
-# Background color used for the sidebar and most interactive widgets (WhatsApp green).
+# Background color used for the sidebar and most interactive widgets.
 secondaryBackgroundColor = "#25D366"
 
 # Color used for almost all text (WhatsApp dark gray).
 textColor = "#333333"
 
-# Font family for all text in the app, except code blocks (WhatsApp's default font is "Helvetica Neue").
-font = "Helvetica Neue"
+# Font family for all text in the app, except code blocks.
+font =  "sans serif"
