--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -8,8 +8,8 @@ backgroundColor = "#E5E5E5"
 # Background color used for the sidebar and most interactive widgets.
 secondaryBackgroundColor = "#25D366"
 
-# Color used for almost all text (WhatsApp dark gray).
+# Color used for almost all text.
 textColor = "#333333"
 
 # Font family for all text in the app, except code blocks.
-font =  "sans serif"
+font =  'sans serif'
